--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
 		<p>Absolutely the best day I've had so far.  I have to remind myself that this is like learning a foreign language, and that it's impossible to pick it up as if it were a simple hobby.  Today we were delegated two projects, a personal one and a team based project.  The personal project is one that I am developing for my 4 year old son; it's a story masher.  For clarification sake, what my program will, hopefully, do is take two stories: Star Wars and Teeenage Mutant Ninja Turtles and mash them into one story, or universe if you will.  So, my son will give me a hero from both stories and a villain from both stories, these characters will be entwined into each others respective story, meaning that I will have to replace character names.  The second project, our group project is a project that will find the trending hashtags on twitter in four major metropolitan areas, S.F., LA, Chicago, NY, and have those hashtags analysed.  And then we can turn around with the analysis that we have gleaned, and use those numbers to create our own trending hashtag.  I am still pretty confused and green, but with enough time and patience, one can learn almost anything.  It has to get better from here, right?</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">4/21/15</p></small>
+		<h5>Sixth Day</h5>
+		<p>Wow! I wrote my first program, albeit VERY slowly and with tons of help, but I did it regardless.  It took me all day to complete, but I kept my head up and went forward, even if I felt like giving up a few times; persistence is key.  I can NOT wait to sit down with my son and try this program with him. I think he'll be impressed.  I know I am impressed with myself!  I assume that computer coding is definitely an industry in which there are a lot of highs and lows, yet when the highs hit, they certainly hit!  Now, don't get me wrong.  Is there still a lot of work and understanding on my part to do? Yes. But everyday things become incrementally clearer. I hope this trend doesn't stop.</p>
+		<hr/>
+	</div>
 </div>
 
 
