--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	</div>
 	<div class="col-sm-12">
 		<small><p class="muted" style="float:right;">4/21/15</p></small>
-		<h5>Sixth Day</h5>
+		<h5>Seventh Day</h5>
 		<p>Wow! I wrote my first program, albeit VERY slowly and with tons of help, but I did it regardless.  It took me all day to complete, but I kept my head up and went forward, even if I felt like giving up a few times; persistence is key.  I can NOT wait to sit down with my son and try this program with him. I think he'll be impressed.  I know I am impressed with myself!  I assume that computer coding is definitely an industry in which there are a lot of highs and lows, yet when the highs hit, they certainly hit!  Now, don't get me wrong.  Is there still a lot of work and understanding on my part to do? Yes. But everyday things become incrementally clearer. I hope this trend doesn't stop.</p>
 		<hr/>
 	</div>
