--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
 		<p>Wow! I wrote my first program, albeit VERY slowly and with tons of help, but I did it regardless.  It took me all day to complete, but I kept my head up and went forward, even if I felt like giving up a few times; persistence is key.  I can NOT wait to sit down with my son and try this program with him. I think he'll be impressed.  I know I am impressed with myself!  I assume that computer coding is definitely an industry in which there are a lot of highs and lows, yet when the highs hit, they certainly hit!  Now, don't get me wrong.  Is there still a lot of work and understanding on my part to do? Yes. But everyday things become incrementally clearer. I hope this trend doesn't stop.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">4/22/15</p></small>
+		<h5>Eighth Day</h5>
+		<p>Well, the days keep getting better here.  I am really starting to get a good groove when it comes to python. the labs that are provided are challenging, but once I find out the solution to them, I not only feel jubilant, but confident in understanding how I got to that solution.  Learning computer programming is taking it step by step.  I think where my weakness in learning programming is trying to learn too much at once; I need to slow down and take it piecemeal. It is impossible to know everything, but it is not impossible to learn anything. Today was a great day for me, I am certainly making progress, and that feels great.</p>
+		<hr/>
+	</div>
 </div>
 
 
