--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 		<p>Well, the days keep getting better here.  I am really starting to get a good groove when it comes to python. the labs that are provided are challenging, but once I find out the solution to them, I not only feel jubilant, but confident in understanding how I got to that solution.  Learning computer programming is taking it step by step.  I think where my weakness in learning programming is trying to learn too much at once; I need to slow down and take it piecemeal. It is impossible to know everything, but it is not impossible to learn anything. Today was a great day for me, I am certainly making progress, and that feels great.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">4/23/15</p></small>
+		<h5>Ninth Day</h5>
+		<p>Today was a tough day for me.  When I went home last night I was filled with a sense of confidence and understanding with Python.  Upon entering the program this morning all of that confidence was eradicated, and the knowledge I thought I had was inapplicable.  After feeling lost and confused for most of the morning, I forced myself to tackle the things that frightened me, due to my ignorance with Python, and I have to say, it worked.  My method was not to look at the problem as a big problem, but as a series of small ones that just happen to make a large one.  I have to continue to remind myself that code is written line by line, and therefore learning it should be line by line. It's starting to become clearer to me, but it hasn't clicked yet, like it has for others.  I hope it clicks soon.</p>
+		<hr/>
+	</div>
 </div>
 
 
