Modified for lab 3/HTML

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="favicon.ico">
-<title>Charlie's Blog</title>
+<title>Blog</title>
 <!-- CSS -->
 <link href="assets/css/bootstrap.css" rel="stylesheet">
 <link href="assets/css/bootswatch.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-<h2>Charlie's Blog</h2>
+<h2>Blog</h2>
 </div>	
 <hr/>
 </div>
@@ -104,6 +104,12 @@
 		<p>Today was my python evaluation and I passed.  Yes, I am just as surprised as you are.  Or, maybe I'm not.  I went in there, was asked some technical questions about Python, stood there and thought for a bit, and then information that I believe was latent and buried deep in my mind started to come forth and I was finding myself applying what I have learned about in python to the questions being asked.  I couldn't believe it.  These past two weeks have been very challenging for me and it has put me in the position of self doubt in my abilities.  But I have to trust in myself; to trust that I am getting this, and that I have already applied what I have learned.  I can and will do this!  Never give up!</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">4/29/15</p></small>
+		<h5>Thirteenth Day</h5>
+		<p>Today, we had a crash course in HTML.  My experience with HTML so far has been a good one.  I find that I can read and write in HTML a lot easier than I ever did with Python.    I finished all 3 of my labs today, which is a first for me.  I also found that when I ran into an obstacle in HTML during my labs, it was easier to surmount the issues that I faced in HTML than with Python.  With that being said, I feel like the fundamental knowledge that I gleaned from the past two weeks with Python were being applied in my learning of HTML.   Does this mean that it gets easier?   This early stage of understanding HTML is exciting for me, and very promising for what JS/HTML has in store for me in the future.  </p>
+		<hr/>
+	</div>
 </div>
 
 
@@ -124,9 +130,9 @@
 <a href="http://www.bootswatch.com" target="_blank">Readable by Bootswatch</a>,
 <a href="https://www.behance.net/abhishekpipalva" target="_blank">Icons by Abhishek Pipalva</a>,
 <a href="https://www.python.org" target="_blank">Python</a>, and 
-<a href="http://www.jquery.com" target="_blank">jQuery</a>, 
+<a href="http://www.jquery.com" target="_blank">jQuery</a>.
 <br/>
-Content &copy; 2015 <a href="http://www.devcodecamp.com/" target="_blank">devCodeCamp</a>, and Charlie Johnson
+Content &copy; 2015 <a href="http://www.devcodecamp.com/" target="_blank">devCodeCamp</a>
 </small>
 </p>
 </footer>
