--- a/index.html
+++ b/index.html
@@ -1,137 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="favicon.ico">
-<title>Charlie's Blog</title>
-<!-- CSS -->
-<link href="assets/css/bootstrap.css" rel="stylesheet">
-<link href="assets/css/bootswatch.css" rel="stylesheet">
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-<script src="assets/js/html5shiv.min.js"></script>
-<script src="assets/js/respond.min.js"></script>
-<![endif]-->
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.ico">
+
+    <title>Charlie's Blog</title>
+
+    <!-- CSS -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootswatch.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="assets/js/html5shiv.min.js"></script>
+      <script src="assets/js/respond.min.js"></script>
+    <![endif]-->
+
+    <style>
+    .sicon {
+    	height:40px;
+    	margin-top: 15px;
+    	vertical-align: bottom;
+    }
+	</style>
+	
+  </head>
+  
 <body>
 <div class="container">
-<div class="row">
-<div class="col-md-12">
-<h2>Charlie's Blog</h2>
-</div>	
-<hr/>
-</div>
+
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Charlie Johnson</a>
+		</div>
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+			<ul class="nav navbar-nav">
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="http://www.devcodecamp.com" target="_blank"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> <img src="assets/img/devcodecamp.png" alt="devcodecamp"></a></li>	
+				<li><input type="text" id="search-second" class="form-control" placeholder="Search Blog" style="float:right; margin-top:18px;"></li>
+
+			</ul>
+		</div>
+	</nav>
+
+	<div class="row">
+		<div class="col-md-8">
+			<h1>This is Charlie's Blog</h1> 
+			<p>I am currently a student at Dev Code Camp: <a href="http://www.devcodecamp.com/" target="_blank">devCodeCamp</a> I am learning 4 computer languages; Python, JavaScript, C#, and .NET. </p>
+			<center>
+			<p><br /><strong><a href="blog.html" target="_blank">Follow my progress at devCodeCamp.</a></strong></p>
+			<p>
+		 		<a href="#" target="_blank"><img class="sicon" src="assets/img/in.png" alt="linkedin"></a>
+		 		<a href="#" target="_blank"><img class="sicon" src="assets/img/fb.png" alt="facebook"></a>
+		 		<a href="#" target="_blank"><img class="sicon" src="assets/img/is.png" alt="instagram"></a>
+			</p>
+			</center>
+		</div>
+		<div class="col-md-4">
+			<h2>&nbsp;&nbsp;Contact me</h2>
+			<div class="list-group">
+				<a href="mailto:youremail@devCodeCamp.com" target="_top" class="list-group-item">
+					<h4 class="list-group-item-heading">At devCodeCamp:</h4>
+					<p class="list-group-item-text">Cjohnson_H@dev.bse.edu</p>
+				</a>
+				<a href="mailto:youremail@something.com" target="_top" class="list-group-item">
+					<h4 class="list-group-item-heading">Personal/Professional:</h4>
+					<p class="list-group-item-text">cpjohnson2@uwalumni.com</p>
+				</a>
 
 
-
-
-
-
-
-
-
-
-<!-- Blog posts are generated here -->
-<div class="row">
-
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">04/14/2015</p></small>
-		<h5>My Second Day</h5>
-		<p>I don't know what day was more confusing, yesterday (my first day) or today (my second day). But I feel like I am learning<br/>regardless of whether I want to bang my head on the table with force. </br>  Today I, (we) learned boolean operators, which is applying<br/>logic statements to Python, and string Formatting (which is very important, especially when it comes to syntax).We touched upon<br/>if/else statements.  I'm a little frightened of the lists, as there is a lot to remember.  We also wrote code for a dice game that<br/>we wrote rules for, although we did not finish this program, I felt it a little daunting and it seemed like it's going over my head.<br/>Our all on your own lab consisted of arrays and arranging the integers so that they came out true or if asked to, came out false. <br/>I also feel like I have to do some personal work in order to "catch up" with the others around here, I feel like an anchor at sea. <br/>Hopefully, like I wrote yesterday, this feeling of inadequacy and confusion will eventually wash away.</p>
-		<hr/>
+			</div>
+		</div>
 	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">04/15/2015</p></small>
-		<h5>Third Day</h5>
-		<p>Today was my third day at dev code bootcamp. I honestly feel better than yesterday and the day before,<br/>my first day.  </br> I still think that there is a lot of work that I need to put in, and determination especially determination!. <br/>Today we worked on our third on your own lab, which consisted of arrays, making sure that the arrays were true, and also <br/>learning how to rotate the arrays so the numbers are in a certain order.  I can only hope that things go smoother from here on out.</p>
-		<hr/>
+	  
+	<div class="row">
+		<div class="col-md-12">
+			<h2>Interests</h2>
+			<hr/>
+		</div>
 	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">04/16/2015</p></small>
-		<h5>Fourth Day</h5>
-		<p>Things are a bit clearer, but still as confusing as hell.  Today we went over our dice game, and applied loops; aka: the while function to our dice game so that we can continue to play our game after the first game. We also learned about loops. <br/> I was paired today with the strongest programmer in our class and found that I learn the best with people that know what I don't, which at this point is A LOT. I know that it/s good everyone/s learning if there is a teacher/pupil model. I am still VERY lost at this and I continue to have this sinking feeling that I may not be cut out for computer programming.  Will Time tell?  That is the ultimate question at this point.</p>
-		<hr/>
+
+	<div class="row">
+		<div class="col-sm-4">
+			<h4>My Family</h4>
+			<p>My biggest interest is being with my family.  I love to spend time with my 4 year old son, my wife, and my cocker spaniel.  Nothing makes me feel happier and more complete.</p>
+		</div>
+		<div class="col-sm-4">
+			<h4>Reading, Running, and Movies Oh MY!</h4>
+			<p>My other strong interest is reading, watching movies, and going for runs.</p>
+		</div>
+		<div class="col-sm-4">
+			<h4>Traveling</h4>
+			<p>Aside from hanging out with my family, watching movies, reading novels and going for runs, the other passion that I have is travelling.  I love to travel!  Seeing new places, experiencing new cultures and eating exotic foods gives me a real sense of adventure and pleasure.</p>
+		</div>
 	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">4/17/2015</p></small>
-		<h5>Fifth Day</h5>
-		<p>Today was certainly the best day of the week.  I had a little pow wow with myself last night and realized that the way to truly understand python is to sit there, no matter how long it takes, and figure it out.  Google, ask friends that have programming experience, watch videos, etc.  The learning method for computer programming is very unique, and being a person that comes from a typical classroom environment, this learning process will take some getting used to.  I am behind in the class, and I have to be fine with that.  I have to sit down by myself, especially this weekend and bang my head against the wall until I start to understand this and catch up.</p>
-		<hr/>
-	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">4/20/15</p></small>
-		<h5>Sixth Day</h5>
-		<p>Absolutely the best day I've had so far.  I have to remind myself that this is like learning a foreign language, and that it's impossible to pick it up as if it were a simple hobby.  Today we were delegated two projects, a personal one and a team based project.  The personal project is one that I am developing for my 4 year old son; it's a story masher.  For clarification sake, what my program will, hopefully, do is take two stories: Star Wars and Teeenage Mutant Ninja Turtles and mash them into one story, or universe if you will.  So, my son will give me a hero from both stories and a villain from both stories, these characters will be entwined into each others respective story, meaning that I will have to replace character names.  The second project, our group project is a project that will find the trending hashtags on twitter in four major metropolitan areas, S.F., LA, Chicago, NY, and have those hashtags analysed.  And then we can turn around with the analysis that we have gleaned, and use those numbers to create our own trending hashtag.  I am still pretty confused and green, but with enough time and patience, one can learn almost anything.  It has to get better from here, right?</p>
-		<hr/>
-	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">4/21/15</p></small>
-		<h5>Seventh Day</h5>
-		<p>Wow! I wrote my first program, albeit VERY slowly and with tons of help, but I did it regardless.  It took me all day to complete, but I kept my head up and went forward, even if I felt like giving up a few times; persistence is key.  I can NOT wait to sit down with my son and try this program with him. I think he'll be impressed.  I know I am impressed with myself!  I assume that computer coding is definitely an industry in which there are a lot of highs and lows, yet when the highs hit, they certainly hit!  Now, don't get me wrong.  Is there still a lot of work and understanding on my part to do? Yes. But everyday things become incrementally clearer. I hope this trend doesn't stop.</p>
-		<hr/>
-	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">4/22/15</p></small>
-		<h5>Eighth Day</h5>
-		<p>Well, the days keep getting better here.  I am really starting to get a good groove when it comes to python. the labs that are provided are challenging, but once I find out the solution to them, I not only feel jubilant, but confident in understanding how I got to that solution.  Learning computer programming is taking it step by step.  I think where my weakness in learning programming is trying to learn too much at once; I need to slow down and take it piecemeal. It is impossible to know everything, but it is not impossible to learn anything. Today was a great day for me, I am certainly making progress, and that feels great.</p>
-		<hr/>
-	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">4/23/15</p></small>
-		<h5>Ninth Day</h5>
-		<p>Today was a tough day for me.  When I went home last night I was filled with a sense of confidence and understanding with Python.  Upon entering the program this morning all of that confidence was eradicated, and the knowledge I thought I had was inapplicable.  After feeling lost and confused for most of the morning, I forced myself to tackle the things that frightened me, due to my ignorance with Python, and I have to say, it worked.  My method was not to look at the problem as a big problem, but as a series of small ones that just happen to make a large one.  I have to continue to remind myself that code is written line by line, and therefore learning it should be line by line. It's starting to become clearer to me, but it hasn't clicked yet, like it has for others.  I hope it clicks soon.</p>
-		<hr/>
-	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">4/24/15</p></small>
-		<h5>Tenth Day</h5>
-		<p>Today I presented my personal project, which is a story masher for my four year old son.  Essentially it takes stories from two universes; Star Wars and Teenage Mutant Ninja Turtles, and takes the main characters (the heroes and villains) and mashes them together so that they can coexist in the same universe.  Right now my project is functional, but it is not where I want it to be, so I need to tweak some things in order for it to be ideal.  I was very nervous when presenting, mainly because I have never presented on a computer program before, much less one that I wrote!  However, after I completed my presentation I realized just how far I have come within these two weeks.  The things that I am understanding and doing today, are things that would have been out of my league two weeks ago.  So progress is definitely being made, whether I feel it sometimes or not; progress is being made.  Our group project went well.  We designed a program to track the most popular hash tags in twitter from 4 major cities: LA, Chicago, SF, and NYC.  We then analysed that data and put that data into a few pie charts, it was definitely cool to see the finished product.  I feel that not only has my confidence increased in programming these last two weeks, but my feeling of being frightened by the material has abated as well. I am excited to see what lays in store for me next.</p>
-		<hr/>
-	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">4/27/15</p></small>
-		<h5>Eleventh Day</h5>
-		<p>With a lot of help from others, I was finally able to finish my personal project to my ideal vision.  I parsed the text files so that it only prints 200 words of the story now, instead of the whole story at once.  This amendment to my personal program took me 6 hours.  I think that to a trained programmer, that would have taken them about 10 minutes max. We had a coding challenge in which we constructed the high/low game from scratch.  I think I was the only one in my class that did NOT finish the project.  I think that at this juncture of the program I should be able to write that game in about a half hour, but where I'm at in my personal experience level, I would be lucky to even create finish a game like that, much less in a half hour.  My skill level is certainly the lowest of the class and it shows, quite clearly.  One thing to note about the high/low game is that when I write it out, in english, I actually have the game.  However, when I sit down to translate that pseudo code to python, I can't.  I just can't.  Perhaps this isn't for me.</p>
-		<hr/>
-	</div>
-	<div class="col-sm-12">
-		<small><p class="muted" style="float:right;">4/28/15</p></small>
-		<h5>Twelfth Day</h5>
-		<p>Today was my python evaluation and I passed.  Yes, I am just as surprised as you are.  Or, maybe I'm not.  I went in there, was asked some technical questions about Python, stood there and thought for a bit, and then information that I believe was latent and buried deep in my mind started to come forth and I was finding myself applying what I have learned about in python to the questions being asked.  I couldn't believe it.  These past two weeks have been very challenging for me and it has put me in the position of self doubt in my abilities.  But I have to trust in myself; to trust that I am getting this, and that I have already applied what I have learned.  I can and will do this!  Never give up!</p>
-		<hr/>
-	</div>
-</div>
 
 
 
 
 
 
+<!--    Blog     -->
+	<div id="blogheader" class="row">
+    	<!--    Your blog header and search bar will eventually go here. Ignore this comment for now. -->
+	</div>
+	<div id="blogcontent" class="row">
+    	<!--    Your blog entries and pagination will eventually go here. Ignore this comment for now. -->
+	</div>
+<!--    /.Blog     -->
 
 
 
 
-<div class="row">
-<p><span style="height:200px; line-height:200px">&nbsp;</span></p>
-<footer class="text-center">
-<p class="text-muted">
-<small>Built using
-<a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>,
-<a href="http://www.bootswatch.com" target="_blank">Readable by Bootswatch</a>,
-<a href="https://www.behance.net/abhishekpipalva" target="_blank">Icons by Abhishek Pipalva</a>,
-<a href="https://www.python.org" target="_blank">Python</a>, and 
-<a href="http://www.jquery.com" target="_blank">jQuery</a>, 
-<br/>
-Content &copy; 2015 <a href="http://www.devcodecamp.com/" target="_blank">devCodeCamp</a>, and Charlie Johnson
-</small>
-</p>
-</footer>
-</div>	
+
+
+   <div class="row">
+	<hr/>
+	<footer class="text-center">
+	    <p class="text-muted">
+	    <small>
+	    Built using
+	    <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>,
+	    <a href="http://www.bootswatch.com" target="_blank">Readable by Bootswatch</a>,
+	    <a href="http://glyphicons.com" target="_blank">Glyphicons</a>,
+	    <a href="https://www.behance.net/abhishekpipalva" target="_blank">Icons by Abhishek Pipalva</a>,
+	    <a href="http://www.jquery.com" target="_blank">jQuery</a>.
+	    <br/>
+	    Content &copy; 2015 <a href="http://www.devcodecamp.com/" target="_blank">devCodeCamp</a> &amp; --Charlie Johnson--
+	    </small>
+	    </p>
+	</footer>
+    </div>		
+
 </div><!-- /.container -->
+
 <!--  JavaScript - Placed at the end of the document so the pages load faster -->
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
