--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 		<div class="col-md-4">
 			<h2>&nbsp;&nbsp;Contact me</h2>
 			<div class="list-group">
-				<a href="mailto:youremail@devCodeCamp.com" target="_top" class="list-group-item">
+				<a href="mailto:Cjohnson_H@dev.bse.edu" target="_top" class="list-group-item">
 					<h4 class="list-group-item-heading">At devCodeCamp:</h4>
 					<p class="list-group-item-text">Cjohnson_H@dev.bse.edu</p>
 				</a>
-				<a href="mailto:youremail@something.com" target="_top" class="list-group-item">
+				<a href="mailto:cpjohnson2@uwalumni.com" target="_top" class="list-group-item">
 					<h4 class="list-group-item-heading">Personal/Professional:</h4>
 					<p class="list-group-item-text">cpjohnson2@uwalumni.com</p>
 				</a>
