--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,12 @@
 		<p>May the Fourth be with you!  Today we learned some more HTML and JQUERY.   We had 2 labs which dealt directly with HTML, and JQuery.  I find all of our labs extremely useful and applicable.  Java Script is another beast for sure; with the CSS, HTML, and JS, it seems like you need to make sure that all your ducks are in a row before executing properly.  I never thought I'd say this, but I miss Python right now, for that very reason.  Tomorrow, I will delve into the two projects that were assigned by Nick.  The first project has to do with submitting information into a website and validating the information, and the second project is measuring a concrete block.  I look forward to completing these two projects with what I have already learned in JS.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/5/2015</p></small>
+		<h5>Seventeenth Day</h5>
+		<p>Well, what to say, other than today was a tough day for me in regards to good ol' Java Script.  I am very close to finishing the first project; the validation project.  I have most of my code set and running, but I need a couple of tweaks to really make it functional.  I haven't even started on the second project, but I am still ahead of the curve, so there is time.   The projects that they gave us may be difficult, but what we are learning from them is invaluable.  Hopefully tomorrow goes a little smoother....we shall see. </p>
+		<hr/>
+	</div>
 </div>
 
 
