--- a/index.html
+++ b/index.html
@@ -119,7 +119,22 @@
 	</div>
 <!--    /.Blog     -->
 
+<div class="row"> 
+  <div class="col-md-8"> 
+    <h2>Blog</h2> 
+    </div> 
+  <div class="col-md-4"> 
+    <span style="height:50px;"> </span> 
+  </div> 
+</div> 
 
+<div class="row"> 
+  <hr/> 
+</div> 
+
+<div id="blog" class="row"> 
+  <!-- blog posts are generated here --> 
+</div> 
 
 
 
@@ -147,5 +162,6 @@
 <!--  JavaScript - Placed at the end of the document so the pages load faster -->
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/blogger.js"></script>
 </body>
 </html>
