--- a/index.html
+++ b/index.html
@@ -163,5 +163,6 @@
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/blogger.js"></script>
+<script> $("p").append( $.getJSON('entries.json', function(data))</script>
 </body>
 </html>
