--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/blogger.js"></script>
-<script> $("p").append(getposts());
+<script> $( "p" ).append( $( "strong" ) );
 </script>
 </body>
 </html>
