20th day!  Hope this works.

--- a/blog.html
+++ b/blog.html
@@ -146,6 +146,12 @@
 		<p>I feel like I am understanding about 50% of JavaScript right now.  this 50% understanding of JS certainly reflects in my projects, which are basically 50% done.  I just can't seem to finish the projects to completion.  It's as if I go along with the JavaScript projects with confidence and aplomb, but that feeling quickly gets dashed when I run into a road block.  The road blocks in JS are much tougher to surmount than when I ran into them in Python.  All I know is that the key to coding is persistence and with enough persistence comes understanding; so I need to be VERY persistent </p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/8/2015</p></small>
+		<h5>Twentieth Day</h5>
+		<p>To say that I have some catch up to do this weekend is an understatement.  I need to really comprehend the fundamentals of how to calculate dimensions using JavaScript, because if I can get that down, I can complete the second project.  Oh, that reminds me that I comepleted the first project....finally.  To jog your memory, the project was a submission form that we needed to create using JS.  Well, after a long, agonizing process I did it.  I am really proud of my own personal progress.  Now onto the weekend, time to catch up, enjoy the weather, enjoy my family, and celebrate mother's day!</p>
+		<hr/>
+	</div>
 </div>
 
 
