--- a/blog.html
+++ b/blog.html
@@ -164,6 +164,12 @@
 		<p>I made some very serious progress on my project.    Today I pulled all the necessary data from college and NFL football sites, converted them into CSV files, and then converted the CSV files into JSON files.  After storing all this great, and very necessary data, the fun really begins; now I need to work out some algorithms that will decide, for the user, what the best rookie is to draft for their fantasy team.   I like this project a lot, because it combines two passions of mine: sports and software development.  I think the mountain (data) has been conquered, it's just getting down the mountain now that matters, and sometimes that's the most treacherous part.  We'll see how tomorrow goes- hopefully I write some really great functions!</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/13/15</p></small>
+		<h5>Twenty-Third Day</h5>
+		<p>Today, I worked really hard on gathering everything that I need for my database. I thought that I had everything that I needed in my database yesterday, but I was mistaken.  I realized that mistake when I started to weigh my variables and noticed that not all the variables are there, so today I had to take a step backward before I take a step forward.  I also ran into the problem of not converting my CSV files correctly into JSON, so that also took some time out of my day.  I am fairly confident that I will get my MVPs out of the way by Friday, and I'll start styling my web page next.</p>
+		<hr/>
+	</div>
 </div>
 
 
