--- a/blog.html
+++ b/blog.html
@@ -170,6 +170,24 @@
 		<p>Today, I worked really hard on gathering everything that I need for my database. I thought that I had everything that I needed in my database yesterday, but I was mistaken.  I realized that mistake when I started to weigh my variables and noticed that not all the variables are there, so today I had to take a step backward before I take a step forward.  I also ran into the problem of not converting my CSV files correctly into JSON, so that also took some time out of my day.  I am fairly confident that I will get my MVPs out of the way by Friday, and I'll start styling my web page next.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/13/15</p></small>
+		<h5>Twenty-Fourth Day</h5>
+		<p>Well my project is off the ground and flying.  I figured out not only how to read a json file, but how to crawl over it and output the data on to my console.  I am still struggling with my algorithms, and that is the core of my MVP, that has to be done by tomorrow.</p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/14/15</p></small>
+		<h5>Twenty-Fifth Day</h5>
+		<p>Today was a good day.  I have my website up and drum roll please, it works!  I'm very proud of myself right now.  Today we also had a review of our exam, which is on Monday, and I feel like I will do a pretty good job on it, but I will use the weekend to brush up on some things to better my overall score.  It's a weird thing in computer programming; when things look virtually impossible on a Monday, and by Friday you find yourself actually doing the thing that you found impossible on a Monday.  And that is one of the biggest realization that I have since learning computer programming: that the only thing that limits you in computer programming is a persons imagination.</p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/18/15</p></small>
+		<h5>Twenty-Sixth Day</h5>
+		<p>Well, today I presented my website.  I think the presentation went well overall.  I liked presenting the website portion of it, and I also found that when I was explaining my source code, I was presenting it a lot smoother than when I was presenting my Python source code for my personal project in Python.  I am still a little nervous for the more formal presentation that we have on the 27th of May in front of the senior web developers, but I have some time to get acquainted with my website and my code, so I should be ok.  Post presentations we dove right into C#.  We have done a few rudimentary labs on C#, think Hello World.  But I know that by tomorrow we will be undertaking concepts that will be much more difficult than anything that we did today.  I am personally looking forward to staying on ONE language for the rest of the time here in the program (1.5 months), I find that jumping from language to language can often be jarring, but it does make for a well rounded student I guess; so there is a method to the madness here.</p>
+		<hr/>
+	</div>
 </div>
 
 
