--- a/blog.html
+++ b/blog.html
@@ -191,7 +191,13 @@
 	<div class="col-sm-12">
 		<small><p class="muted" style="float:right;">5/19/15</p></small>
 		<h5>Twenty-Seventh Day</h5>
-		<p>Today, was definitely one of my better days in the program.  I am absolutely loving Visual Studio (thank you MS!), and C#.  I don't know if I am understanding it becuase i have two language concepts under my belt, or if it is just clicking for me.  I hope it's a mixture of both, with emphasis on the latter. I finished all the labs that were provided and I really feel like I am absorbing the information in a much more direct manner. I truly think that it might have taken my brain, which is a liberal arts brain - a month and a half to get going and take in the course material, absorb it and then execute on what I've learned.  Of course tomorrow's blog post could be very opposite from this one, so time will tell, but I hope that it just keeps getting better from here on out.  C# you had me at hello. </p>
+		<p>Today, was definitely one of my better days in the program.  I am absolutely loving Visual Studio (thank you MS!), and C#.  I don't know if I am understanding it because I have two language concepts under my belt, or if it is just clicking for me.  I hope it's a mixture of both, with emphasis on the latter. I finished all the labs that were provided and I really feel like I am absorbing the information in a much more direct manner. I truly think that it might have taken my brain, which is a liberal arts brain - a month and a half to get going and take in the course material, absorb it and then execute on what I've learned.  Of course tomorrow's blog post could be very opposite from this one, so time will tell, but I hope that it just keeps getting better from here on out.  C# you had me at hello. </p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/20/15</p></small>
+		<h5>Twenty-Eighth Day</h5>
+		<p>Well, well, well, C# is really amazing.  I don't think I have felt this confident in a programming language since I arrived at this program.  For what might have taken me an hour or so in python labs, in the beginning of the program, is now taking about half that time (30 minutes), with C#.  I think that anyone that says that learning computer programming is akin to learning an instrument or learning a sport, is not far off.  At first programming, and really anything new that you want to learn, that has a considerable learning curve, looks intimating, like there is no way in hell that you will retain all the information that is given to you, much less execute on it, but with enough time, persistence, patience, and practice you can get it...you can execute, maybe not at a pro level (yet), but you can play a few chords, swim a couple of laps, or write a couple of programs---and that is progress my dear friends.  I am excited to see what else lies in store for me with C#.</p>
 		<hr/>
 	</div>
 </div>
