--- a/blog.html
+++ b/blog.html
@@ -200,6 +200,12 @@
 		<p>Well, well, well, C# is really amazing.  I don't think I have felt this confident in a programming language since I arrived at this program.  For what might have taken me an hour or so in python labs, in the beginning of the program, is now taking about half that time (30 minutes), with C#.  I think that anyone that says that learning computer programming is akin to learning an instrument or learning a sport, is not far off.  At first programming, and really anything new that you want to learn, that has a considerable learning curve, looks intimating, like there is no way in hell that you will retain all the information that is given to you, much less execute on it, but with enough time, persistence, patience, and practice you can get it...you can execute, maybe not at a pro level (yet), but you can play a few chords, swim a couple of laps, or write a couple of programs---and that is progress my dear friends.  I am excited to see what else lies in store for me with C#.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/21/15</p></small>
+		<h5>Twenty-Ninth Day</h5>
+		<p>So, today I finished my lab on Enums in C#.  I think that I need some more practice when it comes to Enums, but overall I think that I at least grasp the concepts.  The second thing that I did today was a coding challenge that was writing a reverse hi-lo game in C#.  The writing of Hi-Lo definitely through me for a loop, I wrote a regular Hi-Lo game, but when it's reversed, and the computer has to pick a number, it becomes something altogether different.  When writing the program, I needed to figure out two main things; one, how a computer picks a number, and the second method was how to have the computer wait a set amount of time after making a selection. After a few hours, and some help from my instructor and a classmate I finally wrote the Hi-Lo program to an executable game that worked!  Tomorrow, we dive into methods in C# and method overloading, so it should be a good learning experience.</p>
+		<hr/>
+	</div>
 </div>
 
 
