--- a/blog.html
+++ b/blog.html
@@ -206,6 +206,12 @@
 		<p>So, today I finished my lab on Enums in C#.  I think that I need some more practice when it comes to Enums, but overall I think that I at least grasp the concepts.  The second thing that I did today was a coding challenge that was writing a reverse hi-lo game in C#.  The writing of Hi-Lo definitely through me for a loop, I wrote a regular Hi-Lo game, but when it's reversed, and the computer has to pick a number, it becomes something altogether different.  When writing the program, I needed to figure out two main things; one, how a computer picks a number, and the second method was how to have the computer wait a set amount of time after making a selection. After a few hours, and some help from my instructor and a classmate I finally wrote the Hi-Lo program to an executable game that worked!  Tomorrow, we dive into methods in C# and method overloading, so it should be a good learning experience.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/22/15</p></small>
+		<h5>Thirtieth Day</h5>
+		<p>Today was a pretty good day for me.  I finished my Fun With Methods lab, which was good; and yet again, I am finishing these labs A LOT quicker than a month ago.  I am currently working on the Fun With Enums lab, and I'm very near completion with that lab.  The labs that are created here are really useful, as they are not only educational, but when we are assigned a project, whether it's collaborative or personal, the labs always factor in as a good reference point.  This long weekend, I am going to devote some time to finishing up my labs, and doing some hearty research on C#.</p>
+		<hr/>
+	</div>
 </div>
 
 
