--- a/blog.html
+++ b/blog.html
@@ -212,6 +212,12 @@
 		<p>Today was a pretty good day for me.  I finished my Fun With Methods lab, which was good; and yet again, I am finishing these labs A LOT quicker than a month ago.  I am currently working on the Fun With Enums lab, and I'm very near completion with that lab.  The labs that are created here are really useful, as they are not only educational, but when we are assigned a project, whether it's collaborative or personal, the labs always factor in as a good reference point.  This long weekend, I am going to devote some time to finishing up my labs, and doing some hearty research on C#.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/26/2015</p></small>
+		<h5>Thirty-First Day</h5>
+		<p>Today marks the half way point of the program.  It's hard to believe that I am already half way through, and what's funny is that my brain feels 50% complete when it comes to wrapping my head around computer programming.  What I am absorbing in this program is effecting me greatly; whenever any one talks I am putting their speech into functions- if/else statements, also when I dream now, almost ever dream has something to do with coding, whether it's me reading it on a screen, writing it, or talking about; coding is the main theme of my life this past month and a half.  I never thought I would be able to think this way; an analytical, logical, problem solving way of thinking, it's pretty crazy.  Back to the routine though, today I presented my JavaScript project again, another dress rehearsal.  I'm overall pretty happy with my website, although I feel like it lacks a WOW factor, and it does, but it is something that I can change with enough time and research, I have to be a little bit more patient with myself.  I also have to remind myself that I didn't think I was going to be capable of building a website in a couple of weeks,  much less in 3 months!</p>
+		<hr/>
+	</div>
 </div>
 
 
