--- a/blog.html
+++ b/blog.html
@@ -218,6 +218,18 @@
 		<p>Today marks the half way point of the program.  It's hard to believe that I am already half way through, and what's funny is that my brain feels 50% complete when it comes to wrapping my head around computer programming.  What I am absorbing in this program is effecting me greatly; whenever any one talks I am putting their speech into functions- if/else statements, also when I dream now, almost ever dream has something to do with coding, whether it's me reading it on a screen, writing it, or talking about; coding is the main theme of my life this past month and a half.  I never thought I would be able to think this way; an analytical, logical, problem solving way of thinking, it's pretty crazy.  Back to the routine though, today I presented my JavaScript project again, another dress rehearsal.  I'm overall pretty happy with my website, although I feel like it lacks a WOW factor, and it does, but it is something that I can change with enough time and research, I have to be a little bit more patient with myself.  I also have to remind myself that I didn't think I was going to be capable of building a website in a couple of weeks,  much less in 3 months!</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/27/2015</p></small>
+		<h5>Thirty-Second Day</h5>
+		<p>Today I presented my final project in JavaScript in front of the software developers, well, one software developer.  My website might not have had that WOW factor that I wanted, but I think that it was my presentation skills that was really the wow factor.  Having the instructors run through the presentations multiple times really prepared me for the final presentation.  The thing I need to improve on now are my technical skills. </p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/28/15</p></small>
+		<h5>Thirty-Third Day</h5>
+		<p>Today was a very tough day for me. I was literally stuck on one problem from a lab on arrays for most of the day, which is quite frustrating.  I hope that the pattern that I have seen emerge for me through out the program; the I am getting it, and then, oh wait, I'm don't get it- doesn't happen to me with C#, I know that the possiblity of that happening is there, but I hope it doesn't.</p>
+		<hr/>
+	</div>
 </div>
 
 
