--- a/blog.html
+++ b/blog.html
@@ -227,7 +227,13 @@
 	<div class="col-sm-12">
 		<small><p class="muted" style="float:right;">5/28/15</p></small>
 		<h5>Thirty-Third Day</h5>
-		<p>Today was a very tough day for me. I was literally stuck on one problem from a lab on arrays for most of the day, which is quite frustrating.  I hope that the pattern that I have seen emerge for me through out the program; the I am getting it, and then, oh wait, I'm don't get it- doesn't happen to me with C#, I know that the possiblity of that happening is there, but I hope it doesn't.</p>
+		<p>Today was a very tough day for me. I was literally stuck on one problem from a lab on arrays for most of the day, which is quite frustrating.  I hope that the pattern that I have seen emerge for me through out the program; the I am getting it, and then, oh wait, I'm don't get it- doesn't happen to me with C#, I know that the possibility of that happening is there, but I hope it doesn't.</p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">5/29/15</p></small>
+		<h5>Thirty-Fourth Day</h5>
+		<p>Today I had a lunch interview with a company and it went great, so great in fact that I have a second interview lined up, so yay for me.  I also have another interview, with another company scheduled for next week.  I finally feel like I am having an upper hand when it comes to the job market, something that is very new to me at this moment.  The rest of the day was spent finishing up labs, which some parts of the weekend will be used for too.</p>
 		<hr/>
 	</div>
 </div>
