--- a/blog.html
+++ b/blog.html
@@ -236,6 +236,12 @@
 		<p>Today I had a lunch interview with a company and it went great, so great in fact that I have a second interview lined up, so yay for me.  I also have another interview, with another company scheduled for next week.  I finally feel like I am having an upper hand when it comes to the job market, something that is very new to me at this moment.  The rest of the day was spent finishing up labs, which some parts of the weekend will be used for too.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/1/15</p></small>
+		<h5>Thirty-Fifth Day</h5>
+		<p>This morning, I learned MVC in C#.  Just another thing to wrap my head around.... MVC in C# is interesting to say the least.  There are a lot of parts to the MVC machine, it kind of reminds me of JavaScript.  I finished the first of two MVC projects today that had to do with employees at a fictional company.  The thing that makes MVC hard is that there isn't much on Google for MVC5, but I actually found that struggling through it is important for sharpening my development skills. The second MVC project I am currently still working on, it has the theme as the first project, but we have to create it from scratch, hopefully I'll be done tomorrow.</p>
+		<hr/>
+	</div>
 </div>
 
 
