--- a/blog.html
+++ b/blog.html
@@ -242,6 +242,54 @@
 		<p>This morning, I learned MVC in C#.  Just another thing to wrap my head around.... MVC in C# is interesting to say the least.  There are a lot of parts to the MVC machine, it kind of reminds me of JavaScript.  I finished the first of two MVC projects today that had to do with employees at a fictional company.  The thing that makes MVC hard is that there isn't much on Google for MVC5, but I actually found that struggling through it is important for sharpening my development skills. The second MVC project I am currently still working on, it has the theme as the first project, but we have to create it from scratch, hopefully I'll be done tomorrow.</p>
 		<hr/>
 	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/4/15</p></small>
+		<h5>Thirty-Seventh Day</h5>
+		<p>Today I am going to blog for today and yesterday.  Yesterday the team met at a coffee shop down town Milwaukee and we worked on a project in which we were to pull data from Facebook.  Needless to say, nobody finished, but we all very close to finishing today, and that's what matters.</p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/5/15</p></small>
+		<h5>Thirty-Eighth Day</h5>
+		<p>Today I did a lot of research on Scopes in face book.  After reacquainting myself with scopes pertaining to C#, I needed to apply that knowledge to the facebook app that I am using in my MVC5.  Although I applied what I learned about scopes, it seemed not to help me when I actually ran my program, I discovered that scope was not my problem, that it was actually another problem that I have to diagnosis and hopefully resolve in a timely manner---ahh the life of an aspiring developer. </p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/8/15</p></small>
+		<h5>Thirty-Ninth Day</h5>
+		<p>Today I worked mainly on finishing up my Facebook Project, which was very difficult.  As for tomorrow I'm going to be tackling the C# labs that were pushed last Friday. </p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/10/15</p></small>
+		<h5>Fortieth Day</h5>
+		<p>Today I have been asked to go through all of the past labs,  make a list of concepts that I might not have grasped right away.  I was originally thinking that my list would be pages long, but it seems like I know more than I think I do.  My list primarily consists of C# concepts that I missed, along with a couple of Python & JavaScript concepts.  The reassessment of these concepts are going to help me greatly in moving forward in the course for this last month.  MY only hope is that in a month from now I would be more comfortable than ever with the concepts.</p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/11/15</p></small>
+		<h5>Forty-First Day</h5>
+		<p>Today was much the same as yesterday, working on labs and grasping concepts that might have been ambiguous to me the first time.  I also worked on my resume, got that into shape.</p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/17/15</p></small>
+		<h5>Forty-Eighth Day</h5>
+		<p>Today was mostly spent on our team project which is a website that is dedicated to alumni, existing students at Dev Code Camp.  My part of the project is to set up the events and calendar for the website using C# and SQL.  Along with the lengthy and very informative lecture on SQL, I think that I can accomplish this with little to no hardship.  We'll have to wait and see.</p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/18/15</p></small>
+		<h5>Forty-Ninth Day</h5>
+		<p>I had an interview with Trisept Solutions today, and it went much better than I expected.  I was obviously nervous about technical part of the interview, but that went easier that I had anticipated and it also reinforced how much I have actually learned here at Dev Code Camp.  The tech portion of the interview was a submit form and I would say that I got about 80-90 percent of it.  I'm feeling pretty confident in my skills in terms of what they expect from a junior developer.</p>
+		<hr/>
+	</div>
+	<div class="col-sm-12">
+		<small><p class="muted" style="float:right;">6/23/15</p></small>
+		<h5>Fifty-Second Day</h5>
+		<p>Today we worked very hard on our project.  I am displaying data from the SQL server in my view in MVC, which is a giant step forward in terms of progress.  We also had a very long lecture on object oriented programming in C#, where we built a robot that crushed people.  The lecture was long, but very informative.  Another thing that happened today was a mini coding challenge that had to deal with obfuscation, and my partner and I had the best, obfuscated code!</p>
+		<hr/>
+	</div>
 </div>
 
 
